fixed 100vw to 99.5vw because 100vw gives a horizontal scroll bar

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -5,7 +5,7 @@
   right: 50%;
   margin-left: -50vw;
   margin-right: -50vw;
-  width: 100vw;
+  width: 99.5vw;
   padding: 3rem 0;
 }
 
@@ -408,7 +408,7 @@ html {
   right: 50%;
   margin-left: -50vw;
   margin-right: -50vw;
-  width: 100vw;
+  width: 99.5vw;
   padding: 3rem 0;
 }
 
